Fixed vertical image overflow in listings. Also cleared out a bunch of comments in headerfooter.css.

--- a/static/starmanite/headerfooter.css
+++ b/static/starmanite/headerfooter.css
@@ -38,13 +38,9 @@ hr { border-color: gold; }
 
 .listing-item {
 	list-style-type: none;
-	/* max-width: 200px; */
 	margin: 15px 0;
 	padding-left: 0;
-	/* display: flex; */
-	/* align-items: center; */
 	display: block;
-	/* text-align: center; */
 	border: 1px solid;
 }
 @media screen and (max-width: 550px) {
@@ -54,26 +50,16 @@ hr { border-color: gold; }
 }
 
 .listing-item > li {
-	/* display: flex; */
-	/* align-items: center; */
-	/* justify-content: center; */
 	display: inline-block;
 	text-align: center;
-	/* width: 24%; */
 	border: 1px solid transparent;
 	height: 150px;
-	/* margin-left: 25px; */
-	/* margin-right: 25px; */
-	/* margin: 5px -5px 5px 5px; */
 	margin: 5px;
 	width: 23%;
 	min-width: 200px;
-	/* border: 1px solid; */
-	/* margin-left: 5px; */
-	/* margin-right: -5px; */
 }
 .listing-item img {
-	max-height: 100%;
+	max-height: 125px;
 }
 
 .listing-item > li:first-child {
